--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,13 @@
       name="description"
       content="Hi i am Paulos Gebeyehu. I am a front end developer."
     />
+    <style>
+      /* Select the favicon image and apply rounded corners */
+      link[rel="icon"] {
+        border-radius: 50%;
+      }
+    </style>
+    <link rel="icon" href="/Images/p.png" type="image/png"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
